# Linux-Disk-Analyzer

./: DiskAnalyzer
DiskSpace/src/: index.html  main.js  style.css  table.html  table.js  test.json  tree.html  tree.js
DiskSpace/src-tauri/: Cargo.toml  tauri.conf.json
DiskSpace/src-tauri/src/: main.rs
DiskSpace/src/piechart/: bundle.js  data.js  index.js  piechart.html
