[package]
name = "DiskSpace"
version = "0.0.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.57"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = {version = "1.2", features = [] }

[dependencies]
tauri = {version = "1.2", features = ["api-all"] }
json = "0.12.4"
string = "0.3.0"
structopt = "0.2.18"
rayon = "1.5.1"
pretty-bytes = "0.2.2"
termcolor = "1.1.2"
atty = "0.2.14"
serde = { version = "1.0.131", features = ["derive"] }
serde_json = "1.0.73"
convert-js = "1.0.0-alpha.11"
rquickjs = "0.1.7"
rand = "0.8.5"
chrono = "0.4.23"

[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = [ "custom-protocol" ]
# this feature is used used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = [ "tauri/custom-protocol" ]
